# wenum

./: .gitignore  BUILD.md  README.md  build.sh  pyproject.toml  test_fixes.py  wenum.spec
.github/workflows/: release.yml
src/wenum/helpers/: file_func.py
